Fix logo getting cut off

--- a/resources/assets/sass/navigation.scss
+++ b/resources/assets/sass/navigation.scss
@@ -11,6 +11,7 @@ nav.primary-nav {
 		margin-bottom: .5rem;
 		img {
 			width: 7rem;
+			height: 1.25rem;
 		}
 	}
 	.menu-button {
